movie_project/movies/static/movies/css/styles.css
/* ... */
.hidden {
    opacity: 0;
}

.show {
    animation: fadeIn 0.5s forwards;
}

.container {
    display: flex;
    align-items: flex-start;
    height: 100vh;
    width: 100%;
    overflow: auto;
    padding: 20px;
}

.content {
    flex: 4;
}

.genre-container {
    width: 100%;
    height: 100%;
}

.genre-container .header {
    width: 100%;
    height: 300px;
}

.genre-container .header img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    filter: brightness(0.8) grayscale(0.3);
}

.genre-container .genre-movies {
    width: 100%;
    margin-top: 10px;
}

.genre-container .genre-movies h1 {
    text-align: center;
    font-size: 3rem;
}

.genre-container .genre-movies ul {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    list-style-type: none;
    gap: 10px;
    padding: 20px;
}

.genre-container .genre-movies li {
    flex: 0 0 calc((100% / 5) - 10px);
    margin-top: 2rem;
}

.genre-container .genre-movies li img {
    width: 100%;
    height: 100%;
}

.content {
    padding-top: 5%;
}

.content .form-wrapper {
    padding: 0px 20px;
}

.all-movie-list {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    list-style-type: none;
    margin-left: 20px;
    padding-right: 10%;
}

.all-movie-list li {
    width: calc((100% / 4) - 15px);
    margin: 0px 7px;
    margin-bottom: 3rem;
}

.all-movie-list li .details h3 {
    font-size: 1rem;
}

.all-movie-list li .details .tags > * {
    font-size: 0.75rem;
    margin-bottom: 5px;
}

.all-genre-list {
    flex: 0 0 30%;
    height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: space-between;
}

.all-genre-list h1 {
    font-size: 3rem;
    position: sticky;
}

.all-genre-list .genre-names {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    list-style-type: none;
    overflow-y: scroll;
    padding: 2rem;
    padding-top: 7rem;

    scrollbar-width: none; 
    -ms-overflow-style: none; 

    cursor: none; 
}

.all-genre-list .genre-names::-webkit-scrollbar {
    display: none;
}

.all-genre-list .genre-names:hover .scroll-icon {
    opacity: 1; 
}

.all-genre-list .genre-names:hover {
    cursor: ns-resize; 
}

.scroll-icon {
    position: absolute;
    opacity: 0;
    pointer-events: none; 
    transition: opacity 0.3s ease;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 1rem;
    width: 6vw;
    aspect-ratio: 1 / 1;
    font-size: 1rem;
    border-radius: 50%;
    background-color: rgb(20, 20, 20);
    border: solid 1px rgb(255, 255, 255, 0.1);
    color: rgb(255, 255, 255, 0.5);
}

.all-genre-list .genre-names a {
    display: flex;
    align-items: center;
    gap: 1rem;
    font-size: 2rem;
    text-decoration: none;
    color: #888;
    transition: 0.3s ease;
    cursor: none;
}

.all-genre-list .genre-names i:not(.scroll-icon i) {
    font-size: 1rem;
    color: white;
    opacity: 0;
    transition: 0.3s;
}

.all-genre-list .genre-names a:hover {
    font-size: 4rem;
    color: white;
}

.all-genre-list .genre-names a:hover i:not(.scroll-icon) {
    opacity: 1;
    font-size: 2rem;
}

.all-genre-list .genre-movie {
    flex: 0 0 70%;
    overflow: hidden;
    position: relative;
}

.all-genre-list .genre-movie img {
    position: relative;
    height: 100vh;
    width: auto;
    object-fit: contain;
}

.all-genre-list .genre-movie::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to right, rgba(20, 20, 20, 1) 0%, rgba(0, 0, 0, 0) 100%);
    z-index: 1; 
}

#review-list-section header {
    width: 100%;
    margin-bottom: 1rem;
}

#review-list-container {
    width: 100%;
    align-items: start;
    padding: 20px;
}

#review-list-container figure {
    position: sticky;
    top: 10%;
    margin: 1rem;
    flex: 1;
    min-width: 250px;
}

#review-list-container figure img {
    width: 100%;
    height: 100%;
    box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.51);
}

#review-list-container .tags {
    margin-top: 1rem;
}

.reviews-main {
    flex: 4;
    overflow: hidden;
}

.review-list {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    list-style-type: none;
    overflow-x: hidden;
    padding: 1rem 2rem;
}

#review-list-container .form-wrapper {
    padding: 1rem 2rem;
}

.toggle-slider {
    display: flex;
    align-items: center;
    gap: 10px;
}

.toggle-slider span {
    font-size: 1rem;
}

.slider-track {
    position: relative;
    width: clamp(72px, 6vw, 86px);
    height: clamp(32px, 3.5vh, 100px);
    background-color: rgb(53, 52, 52);
    border-radius: 30px;
    cursor: pointer;
    transition: 0.3s;
}

.slider-track:hover {
    background-color: rgb(70, 70, 70);
}

.slider-thumb {
    position: absolute;
    transform: translate(0, -50%);
    top: 50%;
    left: 4px;
    background-color: white;
    height: 80%;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    transition: 0.5s;
}

.toggle-slider.active .slider-track {
    background-color: white;
}

.toggle-slider.active .slider-thumb {
    background-color: rgb(20, 20, 20);
    left: calc(70% - 4px);
}

.toggle-slider.active i {
    color: black;
}

.slider-track i {
    position: absolute;
    font-size: 0.75rem;
    transform: translate(0, -50%);
    top: 50%;
    opacity: 0;
    transition: 0.7s;
}

.slider-track i {
    opacity: 0;
}

.slider-track:hover i {
    animation: arrow-fade 1s infinite  forwards; 
}

.slider-track .fa-angle-right:nth-of-type(1) {
    left: 45%;
    animation-delay: 0;
}

.slider-track .fa-angle-right:nth-of-type(2) {
    left: 60%;
    animation-delay: 0.3s;
}

.slider-track .fa-angle-right:nth-of-type(3) {
    left: 75%;
    animation-delay: 0.6s;
}

.slider-track .fa-angle-left:nth-of-type(1) {
    left: 45%;
    animation-delay: 0;
}

.slider-track .fa-angle-left:nth-of-type(2) {
    left: 30%;
    animation-delay: 0.3s;
}
/* ... */

